// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManualOverride ManualOverride - should create snapshot (not initialized at all) 1`] = `
<div>
  <ManualOverrideModal
    inStats={Array []}
    onHide={[Function]}
    onSave={[Function]}
    overrides={Array []}
    show={true}
    showHelp={false}
    statsAsTable={Object {}}
    tableType="player-"
  />
</div>
`;

exports[`ManualOverride ManualOverride - should create snapshot (pick first in list) 1`] = `
<div>
  <ManualOverrideModal
    inStats={
      Array [
        Object {
          "key": "Player1",
          "off_3p": Object {
            "value": 0.3,
          },
          "onOffKey": "Baseline",
        },
        Object {
          "key": "Player2",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "On",
        },
      ]
    }
    onHide={[Function]}
    onSave={[Function]}
    overrides={
      Array [
        Object {
          "newVal": 0.5,
          "rowId": "Player2 / On",
          "statName": "off_3p",
          "use": true,
        },
      ]
    }
    show={true}
    showHelp={true}
    statsAsTable={
      Object {
        "Player1 / Baseline": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test
            </p>,
          },
        ],
      }
    }
    tableType="player-"
  />
</div>
`;

exports[`ManualOverride ManualOverride - should create snapshot (players and overrides, nothing selected) 1`] = `
<div>
  <ManualOverrideModal
    inStats={
      Array [
        Object {
          "key": "Player1",
          "off_3p": Object {
            "value": 0.3,
          },
          "onOffKey": "Baseline",
        },
        Object {
          "key": "Player2",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "On",
        },
      ]
    }
    onHide={[Function]}
    onSave={[Function]}
    overrides={
      Array [
        Object {
          "newVal": 0.5,
          "rowId": "Player1 / Baseline",
          "statName": "off_3p",
          "use": true,
        },
      ]
    }
    show={true}
    showHelp={true}
    statsAsTable={
      Object {
        "Player1 / Baseline": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test
            </p>,
          },
        ],
      }
    }
    tableType="player-"
  />
</div>
`;

exports[`ManualOverride ManualOverride - should create snapshot (players and overrides, one filtered player special case) 1`] = `
<div>
  <ManualOverrideModal
    filteredPlayers={
      Set {
        "Player1",
      }
    }
    inStats={
      Array [
        Object {
          "key": "Player1",
          "off_3p": Object {
            "value": 0.3,
          },
          "onOffKey": "Baseline",
        },
        Object {
          "key": "Player2",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "On",
        },
        Object {
          "key": "Player3",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "Off",
        },
      ]
    }
    onHide={[Function]}
    onSave={[Function]}
    overrides={
      Array [
        Object {
          "newVal": 0.5,
          "rowId": "Player1 / Baseline",
          "statName": "off_3p",
          "use": true,
        },
        Object {
          "newVal": 0.5,
          "rowId": "Player3 / Off",
          "statName": "off_3p",
          "use": true,
        },
      ]
    }
    show={true}
    showHelp={true}
    statsAsTable={
      Object {
        "Player1 / Baseline": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test1
            </p>,
          },
        ],
        "Player3 / Off": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test3
            </p>,
          },
        ],
      }
    }
    tableType="player-"
  />
</div>
`;

exports[`ManualOverride ManualOverride - should create snapshot (players and overrides, something selected) 1`] = `
<div>
  <ManualOverrideModal
    inStats={
      Array [
        Object {
          "key": "Player1",
          "off_3p": Object {
            "value": 0.3,
          },
          "onOffKey": "Baseline",
        },
        Object {
          "key": "Player2",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "On",
        },
        Object {
          "key": "Player3",
          "off_3p": Object {
            "value": 0.4,
          },
          "onOffKey": "Off",
        },
      ]
    }
    onHide={[Function]}
    onSave={[Function]}
    overrides={
      Array [
        Object {
          "newVal": 0.5,
          "rowId": "Player1 / Baseline",
          "statName": "off_3p",
          "use": true,
        },
        Object {
          "newVal": 0.5,
          "rowId": "Player3 / Off",
          "statName": "off_3p",
          "use": true,
        },
      ]
    }
    show={true}
    showHelp={true}
    startOverride={
      Object {
        "newVal": 0.5,
        "rowId": "Player1 / Baseline",
        "statName": "off_3p",
        "use": true,
      }
    }
    statsAsTable={
      Object {
        "Player1 / Baseline": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test1
            </p>,
          },
        ],
        "Player3 / Off": Array [
          GenericTableTextRow {
            "className": "",
            "kind": "text-row",
            "text": <p>
              Test3
            </p>,
          },
        ],
      }
    }
    tableType="player-"
  />
</div>
`;
